--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "immutability-helper": "^3.0.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0"
   }
